[gd_scene load_steps=9 format=2]

[ext_resource path="res://HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://HUD/BarContainerScaled.png" type="Texture" id=2]
[ext_resource path="res://HUD/shield.png" type="Texture" id=3]
[ext_resource path="res://HUD/HealthFillScaled.png" type="Texture" id=4]
[ext_resource path="res://HUD/PowerFillScaled.png" type="Texture" id=5]
[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 6 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Margin" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VSplitContainer" type="VSplitContainer" parent="Margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 182.0
margin_bottom = 54.0

[node name="HSplitContainer" type="HSplitContainer" parent="Margin/VSplitContainer"]
margin_right = 162.0
margin_bottom = 22.0

[node name="HealthBarContainer" type="TextureRect" parent="Margin/VSplitContainer/HSplitContainer"]
margin_right = 128.0
margin_bottom = 22.0
texture = ExtResource( 2 )

[node name="Shield" type="TextureRect" parent="Margin/VSplitContainer/HSplitContainer"]
margin_left = 140.0
margin_right = 162.0
margin_bottom = 22.0
texture = ExtResource( 3 )

[node name="HealthBar" type="TextureProgress" parent="Margin/VSplitContainer/HSplitContainer"]
margin_right = 162.0
margin_bottom = 56.0
value = 100.0
texture_progress = ExtResource( 4 )

[node name="Control" type="Control" parent="Margin/VSplitContainer"]
margin_top = 34.0
margin_right = 162.0
margin_bottom = 34.0

[node name="PowerBarContainer" type="TextureRect" parent="Margin/VSplitContainer/Control"]
texture = ExtResource( 2 )

[node name="PowerBar" type="TextureProgress" parent="Margin/VSplitContainer/Control"]
texture_progress = ExtResource( 5 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_left = 862.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 101.0
grow_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "0
"
align = 2

[node name="GameOverLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.0
margin_top = -78.0
margin_right = 147.0
margin_bottom = -17.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "Game Over"
align = 1

